Fixed panel font size and fixed visibility settings. Removed warning panel. Added executionTime property to response and jsp.

--- a/aem-script-console-content/src/main/content/jcr_root/apps/aemscriptconsole/clientlibs/css/aemscriptconsole.css
+++ b/aem-script-console-content/src/main/content/jcr_root/apps/aemscriptconsole/clientlibs/css/aemscriptconsole.css
@@ -1,5 +1,5 @@
 .panel {
-
+    font-size: 14px;
 }
 
 .editorarea{
